feat(auth-service-service): tenant config
mycha-0
